--- a/estilo/mobile.css
+++ b/estilo/mobile.css
@@ -30,12 +30,15 @@ section#login{
     height: 500px;
     border-radius: 20px;
     box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.450);
+
+    transition: width 0.4s, height 0.4s;
+    transition-timing-function: ease;
 }
 
     section#login >div#imagem{
         background: #5f2c82 url(../imagens/pexels-david-underland-3523621.jpg) no-repeat;
         background-size: cover;
-        background-position: bottom center;
+        background-position: center center;
         height: 200px;
         border-radius: 20px 20px 0px 0px;
         display: block;
