--- a/estilo/mobile.css
+++ b/estilo/mobile.css
@@ -50,3 +50,12 @@ section#login{
         padding: 10px;
         margin-top: 50px;
     }
+
+        div#form > h1{
+            text-align: center;
+            margin-bottom: 10px;
+        }
+
+        div#form > p{
+            font-size: 0.8em;
+        }
