--- a/estilo/mq.css
+++ b/estilo/mq.css
@@ -43,4 +43,12 @@
         float: right;
         width: 50%;
     }
+
+    div#form > h1{
+        font-size: 2em;
+    }
+
+    div#form > p{
+        font-size: 1.2em;
+    }
 }
