--- a/estilo/mobile.css
+++ b/estilo/mobile.css
@@ -23,14 +23,16 @@ section#login{
     position: absolute;
     top: 50%;
     left: 50%;
-    transform: translate(-50%, -50%);
+    
 
     background-color: white;
     width: 250px;
     height: 515px;
     border-radius: 20px;
     box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.450);
-
+    
+    /* Trasnsição e trasnformação sempre no fim da linha de codigo -para evitar incopmpatibilidades */
+    transform: translate(-50%, -50%);
     transition: width 0.4s, height 0.4s;
     transition-timing-function: ease;
 }
@@ -46,7 +48,6 @@ section#login{
 
     section#login > div#form{
         display: block;
-        text-align: center;
         padding: 10px;
     }
 
@@ -57,6 +58,7 @@ section#login{
 
         div#form > p{
             font-size: 0.8em;
+            
         }
         
 form > div.campo{
@@ -73,23 +75,29 @@ form label{
 }
 
 
+
 div.campo > span{
-    font-size: 2em;
-    width: 40px;
-    padding: 5px;
+
+    font-size: 1.6em;
+    width: 35px;
+    padding: 7px ;
     color: white;
 }
 
 div.campo > input {
     background-color: #94cfcd;
-    width: calc(100%-44px);
-    height: 100%;
-    transform: translateY(-10px);
+    width: calc(100% - 40px);
+    height: 90%;
     font-size: 1em;
     border: 0px;
     border-radius: 8px;
-    padding: 4px;
+    padding: 5px;
+    transform: translateY(-6px);
 }
+
+    div.campo > input:focus-within{
+        background-color: white;
+    }
 
 form > input[type=submit]{
     display: block;
