--- a/estilo/mq.css
+++ b/estilo/mq.css
@@ -15,6 +15,7 @@
         float: right;
         width: 35%;
         height: 100%;
+        border-radius: 0px 20px 20px 0px;
     }
 
     section#login > div#form{
@@ -22,9 +23,11 @@
         width: 65%;
         
     }
-    form > div.campo > input{
-        margin-bottom: 25px;
-    }
+
+        section#login > div#form > input.send{
+            margin-top: 20px;
+        }
+    
 }
 
 @media screen and (min-width:992px) {
